# icon

./: Cargo.toml
.github/workflows/: rust.yml
src/: cache.rs  icon.rs  lib.rs  search.rs  theme.rs
