[package]
name = "icon"
description = "Reality-compliant library to find icons on linux with ease"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
include = [
    "/Cargo.toml",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/README.md",
    "/src/**"
]
repository = "https://github.com/zeroeightysix/icon"
readme = "README.md"
keywords = ["icon", "loader", "theme", "xdg"]
categories = ["multimedia::images", "data-structures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
freedesktop_entry_parser = { version = "2.0.1", default-features = false }
thiserror = "2.0.17"
xdg = "3.0.0"
log = { version = "0.4.28", optional = true }
walkdir = { version = "2.5.0", default-features = false, optional = true }
qp-trie = { version = "0.8.2", default-features = false, optional = true }

[features]
"log" = ["dep:log"]
"full-search" = ["dep:walkdir"]
"cache" = ["dep:qp-trie"]

[dev-dependencies]
freedesktop-desktop-entry = "0.7.13"
